# lele-rust-projects

./: .gitignore  AGENTS.md  Cargo.toml  NEXT_STEP_READ_THIS!!!!.txt  OBJECTIVE.md  opencode.json
freenet_example/: Cargo.toml  Makefile.toml  OBJECTIVE.md  README.md
freenet_example/contract/: Cargo.toml  build.sh  clicker_contract.wasm
freenet_example/contract/src/: lib.rs
freenet_example/src/: ClickerClient.rs  ClickerError.rs  Error.rs  FreenetClient.rs  Role.rs  clicker.rs  connect.rs  lib.rs  main.rs  recv_after_get.rs  recv_response.rs
freenet_example/src/ClickerClientMethod/: connect.rs  contract_key.rs  count.rs  mod.rs  state.rs  tick.rs
freenet_example/src/FreenetClientMethod/: connect.rs  mod.rs  recv_fn.rs  recv_response.rs  recv_response_timeout.rs  recv_timeout.rs  send.rs
freenet_example/src/testing/: TestNode.rs  connect.rs  deploy.rs  drain.rs  get_count.rs  load_wasm.rs  mod.rs  recv_notification.rs  subscribe.rs  update_count.rs
freenet_example/src/testing/TestNodeMethod/: mod.rs  port.rs  start.rs
freenet_example/tests/: clicker_integration.rs  simple_validate.rs
freenet_libp2p_bevy_example/: Cargo.toml  OBJECTIVE.md
freenet_libp2p_bevy_example/src/: lib.rs
freenet_libp2p_bevy_example/src/PluginMethod/: mod.rs
freenet_libp2p_bevy_example/src/resource/: FreenetNode.rs
freenet_libp2p_bevy_example/src/system/: mod.rs  poll_events.rs
freenet_libp2p_example/: Cargo.toml  OBJECTIVE.md
freenet_libp2p_example/src/: main.rs
libp2p_bevy_example/: .gitignore  Cargo.toml  OBJECTIVE.md
libp2p_bevy_example/.config/: nextest.toml
libp2p_bevy_example/.zed/: global_settings.json  tasks.json
libp2p_bevy_example/examples/: boxes_fake_network.rs  boxes_headless_only_bevy.rs  boxes_only_bevy.rs  boxes_test_bevy_dual_window.rs  boxes_test_only_bevy.rs  clickers_headless_only_bevy.rs  clickers_only_bevy.rs  test_only_mdns.rs
libp2p_bevy_example/src/: lib.rs
libp2p_bevy_example/src/boxes/: GamePlugin.rs  collect_input.rs  mod.rs
libp2p_bevy_example/src/boxes/GamePluginMethod/: build.rs
libp2p_bevy_example/src/boxes/component/: InputBuffer.rs  Player.rs  PlayerInput.rs  Position.rs  Velocity.rs  mod.rs
libp2p_bevy_example/src/boxes/system/: apply_input_to_velocity.rs  character_controller.rs  collect.rs  handle_player_join.rs  handle_player_leave.rs  mod.rs  sync_position.rs
libp2p_bevy_example/src/clicker/: GamePlugin.rs  mod.rs
libp2p_bevy_example/src/clicker/GamePluginMethod/: build.rs
libp2p_bevy_example/src/clicker/component/: ClickCounter.rs  ClickTarget.rs  Owner.rs  mod.rs
libp2p_bevy_example/src/clicker/system/: detect_click.rs  handle_player_join.rs  handle_player_leave.rs  mod.rs  update_counter.rs
libp2p_bevy_example/src/p2p/: Behaviour.rs  Command.rs  Config.rs  Error.rs  GossipTopic.rs  Message.rs  NetworkEvent.rs  PlayerInputData.rs  Plugin.rs  Swarm.rs  constants.rs  get_game_topic.rs  handle_incoming_message.rs  mod.rs
libp2p_bevy_example/src/p2p/ConfigMethod/: coop.rs  lan_coop.rs  lan_pvp.rs  mmo.rs  mod.rs  new.rs  pvp.rs  with_auto_accept.rs  with_connection_timeout.rs  with_heartbeat.rs  with_manual_dial.rs  with_max_players.rs  with_mdns.rs
libp2p_bevy_example/src/p2p/GossipTopicMethod/: from.rs  hash.rs  mod.rs  new.rs
libp2p_bevy_example/src/p2p/PlayerInputDataMethod/: from_bools.rs  is_zero.rs  mod.rs
libp2p_bevy_example/src/p2p/PluginMethod/: build.rs  mod.rs  new.rs
libp2p_bevy_example/src/p2p/SwarmMethod/: dial.rs  get_connected_peers.rs  mod.rs  new.rs  publish.rs  set_enable_manual_dial.rs
libp2p_bevy_example/src/p2p/resource/: Fake.rs  PeerState.rs  Session.rs  mod.rs
libp2p_bevy_example/src/p2p/system/: log_peer_count.rs  mod.rs  (+2 more)
libp2p_bevy_example/src/sync/: Plugin.rs  create_player_input_message.rs  mod.rs  parse_message.rs
libp2p_bevy_example/unruled_examples/: README.md  mdns_orchestrated.rs  mdns_separate_process_duct.rs  mdns_separate_process_self_spawn.rs  mdns_shared_runtime.rs  mdns_testing_module.rs  tcp_direct_connect.rs  utils.rs
(+84 files in other folders)
