[package]
name = "freenet_example"
version = "0.1.0"
edition = "2024"

[dependencies]
freenet = "0.2.68"
tokio = { version = "1", features = ["rt", "sync", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
bincode = "1"
thiserror = "2"
