[package]
name = "freenet_example"
version = "0.1.0"
edition = "2024"

[lints.rust]
non_snake_case = "allow"

[lib]
name = "freenet_example"
path = "src/lib.rs"

[[bin]]
name = "freenet-example"
path = "src/main.rs"

[dependencies]
freenet = "0.2.71"
freenet-stdlib = { version = "0.8", features = ["net"] }
tokio = { version = "1", features = ["rt", "sync", "macros", "rt-multi-thread", "time"] }
tokio-tungstenite = "0.27"
http = "1"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
bincode = "1"
thiserror = "2"
tempfile = "3"
