[package]
name = "freenet_libp2p_example"
version = "0.1.0"
edition = "2024"

[dependencies]
freenet = "0.2.68"
libp2p = { version = "0.56", features = [
    "tcp", "noise", "yamux", "tokio", "dns", "ping",
] }
tokio = { version = "1", features = ["rt", "sync", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
thiserror = "2"
