[package]
name = "clicker_contract"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
freenet-stdlib = { version = "0.8", features = ["contract"] }
freenet-macros = "0.2"
serde = { version = "1", features = ["derive"] }
bincode = "1"

[profile.release]
lto = true
opt-level = "z"
strip = true
